+ Chỉnh lại cách load collection là file hay hình ở client

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Collection/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Collection/Index.cshtml
@@ -22,7 +22,8 @@ else
 {
     <div class="row custom-row">
         @{
-            if (Model.TypeId == (int)MyEnum.CollectionType.File)
+            if(!(bool)Model.IsImage)
+            //if (Model.TypeId == (int)MyEnum.CollectionType.File)
             {
                 foreach (var collectionItem in Model.CollectionItems)
                 {
